Sag Changes
===========

Version 0.9.0
-------------

Breaking Changes

  * Default to cURL HTTP adapter instead of the native PHP implementation. The
    cURL adapter is faster, more stable, and supports SSL.

New Features

  * Support for PHP's strict mode. Strict mode is now turned on by default in
    PHP as of v5.4.

Fixed Bugs

  * Fixed response parsing bug in the cURL HTTP adapter for when HTTP bodies
    are received that have empty lines. For example, if a view returns zero
    results there is an empty line in the JSON that is returned. (closes #72)

  * Fixed parsing of set-cookie header to be case insensitive. (closes #77)

  * Fixed following redirects with the cURL HTTP adapter if PHP's open_basedir
    php.ini variable is set. (closes #78)

Version 0.8.0
-------------

Breaking Changes

  * Header keys are automatically lower cased now, whereas they previously kept
    their capitalization. Unfortunately different API endpoints would sometimes
    capitalize header names different (ex., Etag vs. ETag). Additionally,
    BigCouch and Cloudant sometimes have different header capitalization. So,
    whereas previously you might have done `$response->headers->Cookie` you
    must now do `$response->headers->cookie`.

  * We no longer check the PHP install's configuration for a our supported
    error_reporting level. This is because too many different types of installs
    were causing false positives and false negatives, needlessly breaking
    installs. (closes #39)

  * Added official support for CouchDB 1.2.x.

  * Dropped official support for CouchDB 1.1.x.

New Features

  * Support for setPathPrefix() from Sag-JS v0.3.0. Allows you to prepend all
    URLs with a string, which is especially useful when going through a proxy.

Fixed Bugs

  * SagNativeHTTPAdapter now supports and follows Location headers. (closes
    #37)

  * SagNativeHTTPAdapter's fgets() call no longer hangs on large responses that